all the display stuff works, nothing else does though

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Fruit Recipe Platform{% endblock %}</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="{{ url_for('static', path='/js/tailwind.js') }}"></script>
+
 </head>
 <body class="min-h-screen bg-gray-50">
     <!-- Navigation -->
